ka1/kube1/services/leantime/leantime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leantime
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: leantime
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leantime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leantime
  template:
    metadata:
      labels:
        app: leantime
    spec:
      hostname: leantime
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: leantime
          image: ghcr.io/michelbrodatzki/leantime-pgsql:3.9.8
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: leantime-public-userfiles
              mountPath: /var/www/html/public/userfiles
            - name: leantime-userfiles
              mountPath: /var/www/html/userfiles
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
      volumes:
        - name: leantime-public-userfiles
          persistentVolumeClaim:
            claimName: leantime-public-userfiles-pvc
        - name: leantime-userfiles
          persistentVolumeClaim:
            claimName: leantime-userfiles-pvc
